[project]
name = "carousel-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "lee unseo", email = "lee.unseo17@gmail.com" }
]
dependencies = [
    "streamlit>=1.28.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "isort>=5.12.0",
]

[tool.hatch.metadata]
allow-direct-references = true
